# abc

./: .clang-format  CMakeLists.txt  LICENSE  README.md  make.bat  make.sh
.github/workflows/: cmake.yml
cmake/: CompilerCache.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  FindGLM.cmake  Finddoctest.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  abcConfig.cmake.in
include/abc/: algo.hpp  chrono.hpp  core.hpp  crash.hpp  debug.hpp  enum.hpp  format.hpp  format_chrono.hpp  formatters.hpp  function.hpp  memory_mapped_file.hpp  optional.hpp  platform.hpp  pointer.hpp  profiler.hpp  result.hpp  string.hpp  tagged_type.hpp  timer.hpp  utils.hpp
include/abc/platform/: platform.hpp
src/: core.cpp  debug.cpp  enum.cpp  memory_mapped_file.cpp  pointer.cpp
src/platform/unix/: memory_mapped_file.cpp
src/platform/win/: memory_mapped_file.cpp
tests/: CMakeLists.txt  algo.cpp  enum.cpp  format.cpp  memory_mapping.cpp  optional.cpp  pointer.cpp  profiler.cpp  result.cpp  tagged_type.cpp  testlib.cpp  utils.cpp
